# Asmbli

./: .env.example  .eslintrc.json  .gitignore  App.tsx  CHAT_TEST_SPECIFICATIONS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATABASE.md  DEMO_GUIDE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_ROADMAP.md  DEPLOYMENT_SOW.md  DEVELOPER_QUICKSTART.md  ENHANCED_LIGHT_MODE_README.md  EXECUTIVE_SUMMARY.md  EXPERIMENT_OVERVIEW.md  FUTURE_VISION.md  FUTURE_VISION_ENHANCED.md  GITHUB_MCP_REGISTRY_REQUIREMENTS.md  JSON_RPC_COMMUNICATION_IMPLEMENTATION_SUMMARY.md  LICENSE  LIGHT_THEME_README.md  MCP_INTEGRATION_COMPLETE.md  MCP_LIFECYCLE_MANAGEMENT_IMPLEMENTATION.md  MCP_OAUTH_INTEGRATION_SUMMARY.md  OPEN_SOURCE_CHECKLIST.md  README.md  REFACTOR_COMPLETE.md  SECURITY.md  SEMANTICCOLORS_TO_THEMECOLORS_CONVERSION_COMPLETE.md  SETTINGS_IMPROVEMENT_PLAN.md  TEMPLATES_PREVIEW_FEATURE.md  TERMINAL_CLEANUP_IMPLEMENTATION_SUMMARY.md  TERMINAL_STREAMING_IMPLEMENTATION_SUMMARY.md  TESTING_GUIDE.md  TESTING_RESULTS.md  TEST_REQUIREMENTS.md  THEME_TOGGLE_LOCATION.md  WINDOWS_INSTALLER_GUIDE.md  (+59 more)
.claude/: settings.local.json
.github/: pull_request_template.md
.storybook/: main.ts  preview.ts
chatmcp-fork/: index.html  pubspec.yaml
components/: BetaLandingPage.tsx  FlowDiagram.tsx  (+12 more)
dspy-backend/: .env.example  .gitignore  README.md  main.py  pyproject.toml  run.sh
dspy-backend/src/: __init__.py  config.py
dspy-backend/src/api/: __init__.py  models.py  server.py
dspy-backend/src/modules/: __init__.py  agents.py  rag.py  reasoning.py
dspy-backend/tests/: __init__.py  test_quick.py
(+1058 files in other folders)
